--- a/Бустинги/Градиентный_бустинг.ipynb
+++ b/Бустинги/Градиентный_бустинг.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMqP3yI4OSQmea/Yr+jp+Gk",
+      "authorship_tag": "ABX9TyPt9VXtIAMQE0jYKui/zkKH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,47 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "# Введение в Градиентный бустинг\n",
+        "\n",
+        "Когда мы пытаемся предсказать целевую переменную с помощью любого алгоритма машинного обучения, главные причины отличий реальной и предсказанной переменной — это **noise**, **variance** и **bias**. Это три основных фактора, которые влияют на качество модели и её способность делать точные предсказания\n",
+        "\n",
+        "Ансамбль помогает уменьшить эти факторы (за исключением **noise** — это неуменьшаемая величина).\n",
+        "\n",
+        "\n",
+        "# 1.Что такое Noise (шум)?\n",
+        "\n",
+        "**Noise (шум)** — это случайные или нерегулярные ошибки или вариации в данных, которые не могут быть объяснены моделью. Шум может возникать из-за множества факторов, таких как ошибки измерения, случайные события или другие непредсказуемые влияния. Он представляет собой ту часть данных, которую нельзя объяснить никакой моделью, и его нельзя уменьшить путем изменения модели.\n",
+        "  * Примеры шума в данных:\n",
+        "     1. **Ошибки ввода данных:** Человеческие ошибки при вводе данных в систему могут добавить шум. Например, неверно введенная цена сделки.\n",
+        "     2. **Ошибка измерения:** При измерении биомедицинских показателей, таких как артериальное давление или уровень сахара в крови, могут возникать ошибки из-за неточностей оборудования или неправильного использования приборов.\n",
+        "     3. **Фоновые объекты:** Непреднамеренные объекты или люди, попавшие в кадр, могут добавлять шум к изображению, если они не являются частью основной сцены.\n",
+        "     4. **Фоновые звуки:** В аудиозаписях могут присутствовать посторонние звуки, такие как шумы транспорта, ветер или разговоры, которые не относятся к основной записи.\n",
+        "     5. **Опечатки и грамматические ошибки:** Тексты, содержащие опечатки, ошибки и неформатированный язык, могут усложнить обработку и анализ текстовых данных.\n",
+        "\n",
+        "  **Как уменьшить шум в данных?**\n",
+        "    - **Очистка данных:** Удаление или исправление очевидных ошибок в данных.\n",
+        "    - **Предварительная обработка:** Нормализация и стандартизация данных для уменьшения влияния шума.\n",
+        "  \n",
+        "  Понимание природы шума и применение правильных методов для его уменьшения может значительно улучшить качество моделей машинного обучения и их предсказательную способность.\n",
+        "# Заключение\n",
+        "    * Шум (Noise) — случайные ошибки в данных, которые нельзя устранить.\n",
+        "\n",
+        "# 2. Variance (Дисперсия).\n",
+        "\n",
+        "**Variance (Дисперсия)** — это мера того, насколько модель чувствительна к изменению в обучающих данных. Модель с высокой дисперсией будет сильно изменяться при небольших изменениях в обучающей выборке. Это означает, что такая модель может хорошо подстраиваться под обучающие данные, но плохо обобщать на новые, невидимые данные. Высокая дисперсия приводит к переобучению (overfitting).\n",
+        "\n",
+        "# 3. Bias (Смещение).\n",
+        "\n",
+        "**Bias (Смещение)** — это систематическая ошибка, возникающая из-за неправильных допущений в модели. Модель с высоким смещением упрощает реальность, что может привести к недообучению (underfitting). Это означает, что такая модель будет плохо работать и на обучающих, и на новых данных, так как она слишком проста, чтобы захватить основные зависимости в данных.\n",
+        "\n",
+        "* Пример высокого смещения:\n",
+        "   * Линейная регрессия, пытающаяся предсказать данные, которые на самом деле имеют нелинейные зависимости. Модель будет давать большие ошибки, так как она слишком проста для описания сложной зависимости."
+      ],
       "metadata": {
-        "id": "VG0ZaK9_HP5-"
-      },
-      "outputs": [],
-      "source": []
+        "id": "aSvTqlqqctB9"
+      }
     }
   ]
 }
