--- a/Бустинги/Градиентный_бустинг.ipynb
+++ b/Бустинги/Градиентный_бустинг.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPt9VXtIAMQE0jYKui/zkKH",
+      "authorship_tag": "ABX9TyMrrVxVemXK3NssUcYlW04R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,13 @@
         "\n",
         "# 2. Variance (Дисперсия).\n",
         "\n",
-        "**Variance (Дисперсия)** — это мера того, насколько модель чувствительна к изменению в обучающих данных. Модель с высокой дисперсией будет сильно изменяться при небольших изменениях в обучающей выборке. Это означает, что такая модель может хорошо подстраиваться под обучающие данные, но плохо обобщать на новые, невидимые данные. Высокая дисперсия приводит к переобучению (overfitting).\n",
+        "**Variance (Дисперсия)** – это способность модели реагировать на незначительные колебания в тренировочных данных. Если модель слишком чувствительна и пытается подстроиться под каждый шум или аномалию в данных, это приводит к высокой дисперсии. Такие модели хорошо работают на тренировочных данных, но плохо – на новых, неизвестных данных.\n",
+        "\n",
+        "Нередко инженеры создают чрезмерно сложные модели, которые идеально подходят под тренировочные данные, но полностью терпят крах на реальных данных.\n",
+        "\n",
+        "Это явление также известно как **переобучение**.\n",
+        "\n",
+        "\n",
         "\n",
         "# 3. Bias (Смещение).\n",
         "\n",
