--- a/Бустинги/Градиентный_бустинг.ipynb
+++ b/Бустинги/Градиентный_бустинг.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOuXw4ZLeP41g9Gzh32PYle",
+      "authorship_tag": "ABX9TyOkM5UYUPrzJVGLD9Icvsoh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -162,6 +162,39 @@
       ],
       "metadata": {
         "id": "aSvTqlqqctB9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Ансамблевые методы в машинном обучении\n",
+        "\n",
+        "**Ансамбль (ensemble) в машинном обучении** — метод машинного обучения, где несколько моделей обучаются для решения одной и той же проблемы и объединяются для получения лучших результатов называется ансамблевым методом. Основная предпосылка заключается в том, что результат работы нескольких моделей будет более точен, чем результат только одной модели.\n",
+        "\n",
+        "Когда говорится об ансамблях, то вводится понятие слабого ученика(обычные модели вроде линейной регрессии или дерева решений). Множество слабых учеников являются строительными блоками для более сложных моделей. Объединение слабых учеников для улучшения качества модели, уменьшения смещения или разброса, называется сильным учеником.\n",
+        "\n",
+        "# Для чего нужен ансамбль?\n",
+        "1. **Улучшение точности:** Ансамблевые методы часто дают более точные предсказания по сравнению с отдельными моделями. Это связано с тем, что ошибки разных моделей могут компенсировать друг друга.\n",
+        "2. **Уменьшение дисперсии:** Они помогают уменьшить дисперсию модели, что снижает риск переобучения.\n",
+        "3. **Устойчивость:** Ансамбли менее чувствительны к отдельным ошибкам или шуму в данных, так как объединяют результаты нескольких моделей.\n",
+        "\n",
+        "# Зачем применяется ансамбль?\n",
+        "\n",
+        "Ансамбли применяются для улучшения производительности моделей в различных задачах машинного обучения, таких как классификация, регрессия и кластеризация. Они особенно полезны, когда:\n",
+        "- Одна модель не может достичь необходимой точности.\n",
+        "- Необходимо уменьшить риск переобучения.\n",
+        "- Данные содержат шум или выбросы.\n",
+        "\n",
+        "# Виды ансамблевых методов\n",
+        "Наиболее популярными ансамблевыми методами являются: **стекинг(stacking)**, **бэггинг(bagging)**, **бустинг(boosting)**.\n",
+        "- **Cтекинг(stacking)**. Используется несколько разнородных слабых учеников. Их обучают и объединяют для построения прогноза, основанного на результатах различных слабых моделей.\n",
+        "\n",
+        "- **Бэггинг(bagging)**. В этом случае однородные модели обучают на разных наборах данных и объединяют. Получают прогноз путём усреднения. Если использовать в качестве слабого ученика деревья решений, то получится случайный лес **RandomForestClassifier / RandomForestRegressor**.\n",
+        "\n",
+        "- **Бустинг(boosting)**. При использовании данного метода несколько однородных моделей последовательно обучаются, исправляя ошибки друг друга.\n"
+      ],
+      "metadata": {
+        "id": "fblXO-Tcdo9z"
       }
     },
     {
