--- a/Бустинги/Ансамбли_в_машинном_обучении.ipynb
+++ b/Бустинги/Ансамбли_в_машинном_обучении.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO0n2mLswIEAzH3Kw9crTRh",
+      "authorship_tag": "ABX9TyP1v89o5uSPvD1RdKLU3cQq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,8 +97,19 @@
         "\n",
         "\n",
         "# Бэггинг(bagging)\n",
-        "Основная идея **бэггинга(bagging, от слова \"bootstrap aggregating\")** заключается в том, чтобы обучить несколько одинаковых моделей на разных образцах. Распределение выборки неизвестно, поэтому модели получатся разными.\n",
-        "\n"
+        "\n",
+        "Основная идея **бэггинга(bagging, от слова \"bootstrap aggregating\")** заключается в снижении разброса модели и увеличении ее устойчивости за счет комбинирования предсказаний нескольких моделей, обученных на разных подвыборках исходного тренировочного множества.\n",
+        "\n",
+        "# Принцип работы бэггинга\n",
+        "\n",
+        "1. Создание подвыборок с повторением(bootstrap samples):\n",
+        " - Из исходного тренировочного множества многократно случайным образом выбираются подвыборки с повторением. Это значит, что некоторые образцы могут попасть в одну подвыборку несколько раз, а некоторые могут не попасть вовсе.\n",
+        "2. Обучение моделей:\n",
+        " - На каждой из этих подвыборок обучается своя модель. Важно, что все модели одного типа(например, все деревья решений), но обучены они на различных данных.\n",
+        "3. Агрегация предсказаний:\n",
+        " - Для получения финального предсказания все модели делают предсказания для одного и того же наблюдения.\n",
+        " - В случае регрессии предсказания усредняются.\n",
+        " - В случае классификации используется голосование большинства (выбирается класс, который был предсказан наибольшим количеством моделей).\n"
       ],
       "metadata": {
         "id": "LBMk8a8zx-Wb"
