--- a/Бустинги/Градиентный_бустинг.ipynb
+++ b/Бустинги/Градиентный_бустинг.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMfGhzQhrBlCrs4gGrXYerw",
+      "authorship_tag": "ABX9TyN3/oKdQPRqaxPMP7EMLcq0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,9 +31,8 @@
       "source": [
         "# Градиентный бустинг\n",
         "\n",
-        "В ходе обучения случайного леса каждый базовый алгоритм строится независимо от остальных. Бустинг, в свою очередь, воплощает идею последовательного построения линейной комбинации алгоритмов. Каждый следующий алгоритм старается уменьшить ошибку текущего ансамбля.\n",
+        "**Градиентный бустинг (Gradient Boosting)** - используется для создания сильных предсказательных моделей путем комбинации множества слабых моделей, обычно деревьев решений. Основная идея заключается в последовательном обучении новых моделей, которые корректируют ошибки предыдущих моделей.\n",
         "\n",
-        "Градиентный бустинг обучает слабые модели последовательно, исправляя ошибки предыдущих.\n",
         "\n",
         "Бустинг, использующий деревья решений в качестве базовых алгоритмов, называется **градиентным бустингом над решающими деревьями, (Gradient Boosting on Decision Trees, GBDT)**.\n",
         "\n",
@@ -44,7 +43,7 @@
         "\n",
         "Градиентный бустинг оптимизируется с помощью градиентного спуска.\n",
         "\n",
-        "**Градиентный бустинг** - модель машинного обучения, решающая задачи классификации и регрессии. Она состоит из ансамбля более слабых моделей (чаще всего дерево решений) и учится последовательно на ошибках предыдущей модели.\n",
+        "**Зачем нужен градиентный бустинг?**\n",
         "\n",
         "1. **Решает задачи регрессии и классификации**\n",
         " - Это значит, что модель может выбирать из нескольких заранее готовых ответов (котик на фото или пёсик - это классификация), так и угадывать какое-то число (сколько стоит квартира от млн рублей до млрд рублей - это регрессия).\n",
@@ -103,6 +102,47 @@
       ],
       "metadata": {
         "id": "HfdS6BpCJ8VL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Плюсы и минусы градиентного бустинга\n",
+        "\n",
+        "**Плюсы:**\n",
+        "1. **Высокая точность:** Градиентный бустинг часто превосходит другие алгоритмы в плане точности.\n",
+        "2. **Гибкость:** Возможность использования различных функций потерь и базовых моделей.\n",
+        "3. **Устойчивость к переобучению:** Регуляризация и ранняя остановка помогают избежать переобучения.\n",
+        "\n",
+        "**Минусы:**\n",
+        "1. **Длительное время обучения:** Обучение моделей градиентного бустинга может занять много времени.\n",
+        "2. **Сложность настройки гиперпараметров:** Градиентный бустинг имеет множество гиперпараметров, которые нужно тщательно подбирать.\n",
+        "3. **Чувствительность к шуму:** При наличии большого количества шумовых данных модели могут переобучиться.\n",
+        "\n",
+        "\n",
+        "**Как работает градиентный бустинг?**\n",
+        "\n",
+        "- **Инициализация:** Начинаем с простой модели, например, константы.\n",
+        "- **Обучение слабых моделей:** На каждой итерации обучаем новое дерево решений, чтобы предсказать ошибки (остатки) предыдущей модели.\n",
+        "- **Обновление модели:** Обновляем модель, добавляя новое дерево с определенным весом, который определяет вклад этого дерева.\n",
+        "- **Повторение:** Процесс повторяется до тех пор, пока не достигнем заданного числа деревьев или не уменьшим ошибку до приемлемого уровня.\n",
+        "\n",
+        "**Мелкие нюансы**:\n",
+        "- **Важность масштабирования данных:** Хотя деревья решений не чувствительны к масштабированию данных, некоторые реализации градиентного бустинга могут выиграть от предварительной нормализации данных.\n",
+        "- **Ранняя остановка:** Использование ранней остановки может существенно сократить время обучения и предотвратить переобучение.\n",
+        "- **Регуляризация:** Регуляризация (например, L1 и L2) помогает сделать модели более устойчивыми к переобучению.\n",
+        "- **Важность признаков:** Градиентный бустинг может учитывать важность признаков, что полезно для интерпретации модели.\n",
+        "\n",
+        "**Как лучше использовать градиентный бустинг**\n",
+        "1. **Подбор гиперпараметров:** Внимательно настраивайте гиперпараметры, такие как количество деревьев, глубина деревьев, темп обучения и параметры регуляризации.\n",
+        "2. **Кросс-валидация:** Используйте кросс-валидацию для оценки качества модели и предотвращения переобучения.\n",
+        "3. **Обработка пропусков:** Градиентный бустинг может работать с пропущенными значениями, но лучше обрабатывать их до обучения.\n",
+        "4. **Анализ важности признаков:** Используйте встроенные методы для анализа важности признаков и удаления неинформативных признаков.\n",
+        "5. Использование **LightGBM** или **XGBoost:** Эти реализации градиентного бустинга часто работают быстрее и эффективнее, чем традиционные подходы.\n",
+        "6. **Комбинирование моделей:** Рассмотрите возможность использования градиентного бустинга вместе с другими моделями (например, стекинг) для достижения лучших результатов."
+      ],
+      "metadata": {
+        "id": "43tbYGsIO_uV"
       }
     }
   ]
