--- a/Бустинги/lightGBM.ipynb
+++ b/Бустинги/lightGBM.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMiZcV8eGvjn3CbnwwtENhO",
+      "authorship_tag": "ABX9TyM/pDRVtZlYi+3WqW4/RHTn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,6 +51,8 @@
         "- **Автоматическая обработка категориальных признаков:** Упрощает предобработку данных.\n",
         "\n",
         "- **Масштабируемость:** Поддержка распределенных вычислений и параллельного обучения.\n",
+        "\n",
+        "- **Низкое потребление памяти:** LightGBM эффективно использует память, что позволяет работать с большими наборами данных.\n",
         "\n",
         "**Минусы:**\n",
         "  - **Чувствительность к гиперпараметрам:** Требуется тщательная настройка гиперпараметров для достижения оптимальной производительности.\n",
@@ -173,6 +175,92 @@
       ],
       "metadata": {
         "id": "n5UV0ImYtP45"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Алгоритм градиентного бустинга\n",
+        "\n",
+        "**Градиентный бустинг** — это метод ансамблевого обучения, который строит модель в виде ансамбля слабых моделей (обычно деревьев решений), где каждая новая модель пытается скорректировать ошибки предыдущих моделей. Основные шаги градиентного бустинга:\n",
+        "\n",
+        "- Инициализация модели.\n",
+        "- Обучение новой модели для предсказания ошибки (остатка) текущей модели.\n",
+        "- Обновление текущей модели с учетом новой модели.\n",
+        "- Повторение процесса до тех пор, пока не достигнута заданная точность или количество итераций.\n"
+      ],
+      "metadata": {
+        "id": "y0FSLtkU8ZaM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#  Управление дискретными признаками\n",
+        "\n",
+        "**LightGBM** автоматически обрабатывает категориальные признаки, что упрощает предобработку данных и улучшает производительность модели. Это достигается путем использования специальных методов, таких как target encoding или специальное разбиение категориальных признаков."
+      ],
+      "metadata": {
+        "id": "m1Yb8hQ0-VnH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Гистограммный алгоритм\n",
+        "\n",
+        "Для ускорения поиска оптимальных разбиений, LightGBM использует гистограммы. Вместо того чтобы искать разбиения по всем возможным значениям признака, LightGBM сначала дискретизирует значения признаков в небольшое количество интервалов (бинов) и строит гистограммы.\n",
+        "\n",
+        "**Преимущества гистограммного алгоритма:**\n",
+        " - **Снижение времени обучения:** Гистограммы позволяют быстрее находить оптимальные разбиения.\n",
+        " - **Снижение потребления памяти:** Дискретизация данных уменьшает объем используемой памяти."
+      ],
+      "metadata": {
+        "id": "jG0tA-I3GVUP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#  Как лучше использовать LightGBM?\n",
+        "\n",
+        "1. **Тщательная настройка гиперпараметров:** Используйте методы подбора гиперпараметров, такие как сеточный поиск (Grid Search) или байесовская оптимизация, чтобы найти оптимальные значения.\n",
+        "\n",
+        "   В LightGBM существует множество параметров, которые можно настроить:\n",
+        "     - **num_leaves:** Максимальное число листьев в одном дереве. Увеличение этого параметра может улучшить точность, но может привести к переобучению.\n",
+        "     - **max_depth:** Максимальная глубина дерева. Ограничение глубины может помочь избежать переобучения.\n",
+        "     - **learning_rate:** Шаг обучения. Низкое значение может привести к более точной модели, но потребует больше итераций.\n",
+        "     - **feature_fraction:** Доля признаков, используемых при каждом сплите. Может помочь избежать переобучения.\n",
+        "     - **bagging_fraction** и **bagging_freq:** Параметры для метода бэггинга, который помогает уменьшить переобучение за счет случайного отбора подмножества данных на каждой итерации.\n",
+        "\n",
+        "2. **Кросс-валидация:** Используйте кросс-валидацию для оценки производительности модели и предотвращения переобучения.\n",
+        "\n",
+        "3. **Ранняя остановка (Early Stopping):** Применяйте раннюю остановку для прекращения обучения, если производительность на валидационном наборе данных перестает улучшаться.\n",
+        "\n",
+        "4. **Использование GPU:** LightGBM поддерживает обучение на GPU, что может значительно ускорить процесс обучения на больших данных.\n",
+        "\n",
+        "5. **Мониторинг обучения:** Используйте встроенные функции LightGBM для мониторинга процесса обучения и визуализации метрик.\n",
+        "\n",
+        "6. **Обработка категориальных признаков.**\n",
+        " LightGBM имеет встроенную поддержку категориальных признаков, что упрощает предобработку данных. Просто укажите, какие признаки являются категориальными, и LightGBM автоматически обработает их.\n",
+        "\n",
+        "7. **Управление дисбалансом классов.**\n",
+        "\n",
+        "   При работе с несбалансированными данными LightGBM предлагает несколько подходов для улучшения производительности:\n",
+        "     - **is_unbalance:** Установка этого параметра в **True** автоматически регулирует веса классов.\n",
+        "     - **scale_pos_weight:** Явное задание весов для положительных классов.\n",
+        "     \n",
+        "8. **Важность признаков (Feature Importance)**\n",
+        "\n",
+        "   LightGBM предоставляет возможность оценки важности признаков, что может помочь в интерпретации модели и выборе наиболее значимых признаков.\n",
+        "\n",
+        "9. **Управление памятью.**\n",
+        "   При работе с большими данными управление памятью становится критически важным. LightGBM поддерживает режимы обучения, которые минимизируют использование памяти:\n",
+        "     - **use_two_round_loading:** Загружает данные в два этапа, что снижает потребление памяти.\n",
+        "     - **max_bin:** Уменьшение количества бинов может снизить потребление памяти."
+      ],
+      "metadata": {
+        "id": "Qz-8tScfHp4O"
       }
     }
   ]
