--- a/ООП/Концепция_ООП.ipynb
+++ b/ООП/Концепция_ООП.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNnyuT2djOmhpP7Z/rlgj8U",
+      "authorship_tag": "ABX9TyNnJf6KngwMF8JcWgb9t7jM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,6 +86,66 @@
       ],
       "metadata": {
         "id": "je_GmMFEgRoh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Методы класса\n",
+        "\n",
+        "**Методы класса** — это функции, которые принадлежат классу и определяют поведение объектов. Методы позволяют манипулировать атрибутами экземпляров и класса.\n",
+        "\n",
+        "**Виды методов:**\n",
+        "  - **Методы экземпляра:** Методы, которые работают с конкретным экземпляром класса. Они принимают \\\\( self\\\\) как первый аргумент.\n",
+        "  - **Методы класса:** Методы, которые работают с классом в целом. Они принимают \\\\( cls\\\\) как первый аргумент и определяются с помощью декоратора **@classmethod.**\n",
+        "  - **Статические методы:** Методы, которые не привязаны ни к экземпляру, ни к классу. Они определяются с помощью декоратора **@staticmethod.**\n",
+        "\n",
+        "**Пример:**"
+      ],
+      "metadata": {
+        "id": "g7ahcyNLg43d"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Car:\n",
+        "    wheels = 4\n",
+        "\n",
+        "    def __init__(self, make, model):\n",
+        "        self.make = make\n",
+        "        self.model = model\n",
+        "\n",
+        "    # Метод экземпляра\n",
+        "    def get_info(self):\n",
+        "        return f\"{self.make} {self.model}\"\n",
+        "\n",
+        "    # Метод класса\n",
+        "    @classmethod\n",
+        "    def get_wheels(cls):\n",
+        "        return cls.wheels\n",
+        "\n",
+        "    # Статический метод\n",
+        "    @staticmethod\n",
+        "    def is_motor_vehicle():\n",
+        "        return True\n",
+        "\n",
+        "# Создание экземпляра класса\n",
+        "car1 = Car(\"Toyota\", \"Camry\")\n",
+        "\n",
+        "# Вызов метода экземпляра\n",
+        "print(car1.get_info())  # Output: Toyota Camry\n",
+        "\n",
+        "# Вызов метода класса\n",
+        "print(Car.get_wheels())  # Output: 4\n",
+        "\n",
+        "# Вызов статического метода\n",
+        "print(Car.is_motor_vehicle())  # Output: True\n"
+      ],
+      "metadata": {
+        "id": "yLSBQdp0hniH"
       },
       "execution_count": null,
       "outputs": []
