--- a/ООП/Концепция_ООП.ipynb
+++ b/ООП/Концепция_ООП.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNnJf6KngwMF8JcWgb9t7jM",
+      "authorship_tag": "ABX9TyPIcaOeAzb9m4xLRZoPrnTT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -149,6 +149,192 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Инкапсуляция, наследование и полиморфизм в ООП\n",
+        "\n",
+        "**Инкапсуляция**\n",
+        "\n",
+        "**Инкапсуляция** — это механизм, который объединяет данные (атрибуты) и методы (функции), работающие с этими данными, в один модуль (класс), и ограничивает доступ к этим данным из вне. Основная цель инкапсуляции — защита данных от некорректного использования и упрощение работы с объектами.\n",
+        "\n",
+        "**Принципы инкапсуляции:**\n",
+        "1. **Скрытие данных:** Делает атрибуты недоступными напрямую из вне класса.\n",
+        "2. **Методы доступа:** Предоставляет публичные методы для доступа и модификации скрытых атрибутов (геттеры и сеттеры).\n",
+        "\n",
+        "**Пример инкапсуляции:**"
+      ],
+      "metadata": {
+        "id": "J7XidTl40bNn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Person:\n",
+        "    def __init__(self, name, age):\n",
+        "        self.__name = name  # Приватный атрибут\n",
+        "        self.__age = age    # Приватный атрибут\n",
+        "\n",
+        "    # Геттер для name\n",
+        "    def get_name(self):\n",
+        "        return self.__name\n",
+        "\n",
+        "    # Сеттер для name\n",
+        "    def set_name(self, name):\n",
+        "        self.__name = name\n",
+        "\n",
+        "    # Геттер для age\n",
+        "    def get_age(self):\n",
+        "        return self.__age\n",
+        "\n",
+        "    # Сеттер для age\n",
+        "    def set_age(self, age):\n",
+        "        if age > 0:\n",
+        "            self.__age = age\n",
+        "        else:\n",
+        "            raise ValueError(\"Возраст должен быть положительным числом\")\n",
+        "\n",
+        "# Пример использования\n",
+        "person = Person(\"Alice\", 30)\n",
+        "print(person.get_name())  # Alice\n",
+        "person.set_age(31)\n",
+        "print(person.get_age())   # 31\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sv0UNJFy1Ohr",
+        "outputId": "29713492-2783-4288-826d-a42100ea8f4b"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Alice\n",
+            "31\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Наследование**\n",
+        "\n",
+        "**Наследование** — это механизм, который позволяет одному классу (производному или подклассу) унаследовать атрибуты и методы другого класса (базового или родительского класса). Это позволяет создавать иерархию классов и повторно использовать код.\n",
+        "\n",
+        "**Принципы наследования:**\n",
+        "\n",
+        "1. **Переиспользование кода:** Производные классы могут использовать методы и атрибуты базовых классов.\n",
+        "2. **Расширение функциональности:** Производные классы могут добавлять новые атрибуты и методы или переопределять существующие.\n",
+        "\n",
+        "**Пример наследования:**"
+      ],
+      "metadata": {
+        "id": "IOAeQq1Y1okh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Animal:\n",
+        "    def __init__(self, name):\n",
+        "        self.name = name\n",
+        "\n",
+        "    def speak(self):\n",
+        "        raise NotImplementedError(\"Подклассы должны реализовать этот метод\")\n",
+        "\n",
+        "class Dog(Animal):\n",
+        "    def speak(self):\n",
+        "        return f\"{self.name} говорит: Гав-гав!\"\n",
+        "\n",
+        "class Cat(Animal):\n",
+        "    def speak(self):\n",
+        "        return f\"{self.name} говорит: Мяу!\"\n",
+        "\n",
+        "# Пример использования\n",
+        "dog = Dog(\"Барсик\")\n",
+        "cat = Cat(\"Мурзик\")\n",
+        "print(dog.speak())  # Барсик говорит: Гав-гав!\n",
+        "print(cat.speak())  # Мурзик говорит: Мяу!\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jUpXGgPO2H4Z",
+        "outputId": "1266c5cb-f18c-4d39-93f3-9b53942e6c9b"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Барсик говорит: Гав-гав!\n",
+            "Мурзик говорит: Мяу!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Полиморфизм**\n",
+        "\n",
+        "**Полиморфизм** — это способность объектов разных классов обрабатывать данные посредством одного и того же интерфейса. Это позволяет использовать одно и то же имя метода для различных реализаций в разных классах.\n",
+        "\n",
+        "**Принципы полиморфизма:**\n",
+        "1. **Единый интерфейс:** Методы с одинаковым именем в разных классах могут иметь разную реализацию.\n",
+        "2. **Унификация кода:** Полиморфизм позволяет писать более универсальный код, который может работать с объектами разных типов.\n",
+        "\n",
+        "**Пример полиморфизма:**"
+      ],
+      "metadata": {
+        "id": "6-0IKmwG2UEp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Bird:\n",
+        "    def fly(self):\n",
+        "        return \"Птица летит\"\n",
+        "\n",
+        "class Airplane:\n",
+        "    def fly(self):\n",
+        "        return \"Самолет летит\"\n",
+        "\n",
+        "def make_it_fly(flying_object):\n",
+        "    print(flying_object.fly())\n",
+        "\n",
+        "# Пример использования\n",
+        "bird = Bird()\n",
+        "airplane = Airplane()\n",
+        "make_it_fly(bird)       # Птица летит\n",
+        "make_it_fly(airplane)   # Самолет летит\n"
+      ],
+      "metadata": {
+        "id": "BKBVsvUo2qNu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Итог\n",
+        "\n",
+        "**Инкапсуляция** защищает данные и скрывает детали реализации, **наследование** позволяет повторно использовать код и создавать иерархии классов, а **полиморфизм** обеспечивает гибкость и универсальность кода, позволяя объектам разных типов использовать общий интерфейс. Эти три принципа составляют основу объектно-ориентированного программирования, помогая создавать структурированные и легко поддерживаемые программы."
+      ],
+      "metadata": {
+        "id": "V3ggMeof22iO"
+      }
     }
   ]
 }
