--- a/Other/Генетический_Алгоритм.ipynb
+++ b/Other/Генетический_Алгоритм.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNYv7lUE8hoPzXgBybF5PSf",
+      "authorship_tag": "ABX9TyMYcOBEIWACFz3esWEPyMHA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,11 +95,12 @@
         "  # Основные этапы работы генетического алгоритма\n",
         "\n",
         "  - **Инициализация:** Создание начальной популяции случайным образом.\n",
-        "  - **Оценка:** Вычисление значений целевой функции для каждого индивида в популяции.\n",
+        "  - **Оценка:** Оценить приспособленность каждого индивида в популяции.\n",
         "  - **Селекция:** Выбор родителей для создания новой популяции на основе их приспособленности.\n",
         "  - **Кроссовер:** Создание новых индивидов(потомков) путем комбинирования генов родителей.\n",
         "  - **Мутация:** Внесение случайных изменений в геномы потомков для поддержания разнообразия.\n",
-        "  - **Замена:** Формирование новой популяции и повторение процесса до достижения критерия остановки.\n",
+        "  - **Замена:** Заменить старую популяцию новой.\n",
+        "  - **Проверка:** Если критерий остановки выполнен, завершить, иначе перейти к шагу 2.\n",
         "\n",
         "\n",
         "  # Применение генетического алгоритма\n",
@@ -127,6 +128,165 @@
       ],
       "metadata": {
         "id": "sth3VtjmjyJT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Основные концепции и термины\n",
+        "\n",
+        "- **Хромосомы:** Моделируют возможные решения задачи в виде строк или массивов.\n",
+        "- **Гены:** Элементы хромосомы, представляющие отдельные характеристики решения.\n",
+        "- **Аллели:** Варианты значений, которые может принимать ген.\n",
+        "- **Популяция:** Набор хромосом, рассматриваемых на текущей итерации алгоритма.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "lc7ud1uFvU_r"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Модификации и улучшения\n",
+        "\n",
+        "1. **Элитаризм:** Сохранение лучших индивидов для следующего поколения, чтобы не потерять наилучшие решения.\n",
+        "\n",
+        "2. **Адаптивные генетические алгоритмы:** Изменение вероятности мутации и кроссовера в зависимости от хода алгоритма.\n",
+        "\n",
+        "3. **Генетическое программирование:** Расширение генетических алгоритмов для поиска программ, а не отдельных значений.\n",
+        "\n",
+        "\n",
+        "# Пример на Python с библиотекой DEAP\n",
+        "\n",
+        "# DEAP (Distributed Evolutionary Algorithms in Python):\n",
+        "\n",
+        "  - Популярная библиотека для создания эволюционных алгоритмов, включая генетические алгоритмы.\n",
+        "\n",
+        "# Функция creator.create()\n",
+        "\n",
+        "Начнем с модуля **creator**. Он позволяет создавать новые **объекты(классы)** в программе. Для этого используется функция:\n",
+        "\n",
+        "**create(<название класса>, <базовый класс>, [атрибуты нового класса])**\n",
+        "\n",
+        "Например, если записать:"
+      ],
+      "metadata": {
+        "id": "VcaeBEWBv_g0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "creator.create(\"Point\", object, MAX_COORD = 10, MIN_COORD = 0, coords=list)"
+      ],
+      "metadata": {
+        "id": "0ojo8zTa0lie"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "то в ветке **creator** будет создан класс вида:"
+      ],
+      "metadata": {
+        "id": "vmHE4Y3z0o6B"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Point(object):\n",
+        "    MAX_COORD = 10\n",
+        "    MIN_COORD = 0\n",
+        "\n",
+        "    def __init__(self):\n",
+        "        self.coords = list()"
+      ],
+      "metadata": {
+        "id": "4JTM8KB60sQ9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Обратите внимание, все параметры, которые ссылаются на неизменяемые типы данных, прописываются как атрибуты класса **Point**, а изменяемые(список list) – как локальные свойства экземпляра класса **Point**. Это важный момент.\n",
+        "\n",
+        "Далее, мы можем воспользоваться этим классом, например, так:"
+      ],
+      "metadata": {
+        "id": "RRKrzM2v0iyW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pt = creator.Point()"
+      ],
+      "metadata": {
+        "id": "IoQlZwhG6V81"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Как использовать этот модуль в нашей программе? Смотрите, мы создавали два класса: **FitnessMax** и **Individual**. Давайте, теперь, определим их через функцию **create**. Первый класс запишем в виде:"
+      ],
+      "metadata": {
+        "id": "TMq9gQ-S6fEU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "creator.create(\"FitnessMax\", base.Fitness, weights=(1.0))"
+      ],
+      "metadata": {
+        "id": "z8TdinUu6ika"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Здесь мы создаем класс с именем **FitnessMax**, наследуя от базового класса **base.Fitness**, который отвечает за операции над значениями приспособленности конкретного индивида. В частности, параметр **weights** со значением 1.0 означает, что мы будем использовать одно число для оценки степени приспособленности особи."
+      ],
+      "metadata": {
+        "id": "nzlb7uDc6tFw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Параметры генетического алгоритма\n",
+        "\n",
+        "- **Размер популяции:** Количество индивидов в каждой итерации. Больше размер — больше разнообразия, но выше вычислительная сложность.\n",
+        "\n",
+        "- **Вероятность кроссовера (CXPB):** Шанс, что два родителя скрестятся. Высокая вероятность обычно улучшает качество поиска.\n",
+        "\n",
+        "- **Вероятность мутации (MUTPB):** Шанс, что отдельный ген мутирует. Низкая вероятность помогает сохранить структуру, высокая — поддерживает разнообразие.\n",
+        "\n",
+        "- **Количество поколений (NGEN):** Количество итераций алгоритма."
+      ],
+      "metadata": {
+        "id": "XiTATxXhxAlC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Заключение\n",
+        "**Генетические алгоритмы** — это мощный и гибкий инструмент для решения сложных оптимизационных задач. Они эволюционируют путем естественного отбора, мутации и кроссовера, что делает их подходящими для разнообразных применений. Однако, для эффективного использования генетических алгоритмов необходимо учитывать их настройки и характеристики задачи."
+      ],
+      "metadata": {
+        "id": "8B5RRM7eziMy"
       }
     }
   ]
